Add basic documentation to getting started
 + ignore phpstorm's files
 + disable semantic that fails during less compilation

--- a/client/app/less/main.less
+++ b/client/app/less/main.less
@@ -1,6 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600);
 
 /* Semantic UI */
+/*
+//failed to compile search.less
 @import "../../bower_components/semantic/build/less/elements/button.less";
 @import "../../bower_components/semantic/build/less/elements/divider.less";
 @import "../../bower_components/semantic/build/less/elements/header.less";
@@ -41,7 +43,7 @@
 @import "../../bower_components/semantic/build/less/views/feed.less";
 @import "../../bower_components/semantic/build/less/views/item.less";
 @import "../../bower_components/semantic/build/less/views/list.less";
-
+*/
 body {
     font-family: 'Open Sans', sans-serif;
 }
